apps/vicegerent/searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app.kubernetes.io/name: searxng
spec:
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
