apps/vicegerent/searxng/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng
  namespace: searxng
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: agent-sandbox
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
          rules:
            dns:
              - matchPattern: '*'
    - toEntities: [world]
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
            - port: '80'
              protocol: TCP
